Update .gitignore to exclude large image files temporarily

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,8 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Temporarily exclude large images for initial push
+public/logo.png
+public/mas-abiler.JPEG
+public/mas-barber-berber-shop-selim-ozsahin copy.jpg
